# holcstore

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  requierements.txt  requirements_free.txt  setup.cfg
.github/workflows/: publish.yml
holcstore/: asgi.py  settings.py  urls.py  wsgi.py
hostore/: admin.py  admin_actions.py  apps.py  models.py  tests.py
hostore/migrations/: 0002_rename_store_testd_prm_91e86e_idx_hostore_tes_prm_897468_idx.py  0003_alter_testdatastore_unique_together_and_more.py  0004_testdatastore_created_at.py  0005_alter_testdatastore_prm.py  0006_testdatastorewithattribute.py  0007_testtimeseriesstorewithattribute.py  0008_remove_testtimeseriesstorewithattribute_hostore_tes_version_822f4b_idx_and_more.py  0009_delete_testdatastore_and_more.py
hostore/models/: __init__.py  chunk_timeserie_store.py  cts_model.py  github_cts_test_model.py  hostore.py  manager.py  timeserie_store.py
hostore/tests/: test_chunk_timeserie_store.py  test_chunk_timeserie_store_perf.py  test_chunk_timeserie_sync.py  test_import_chunks.py  tests_admin_download.py  tests_basics.py  tests_find_groups.py  tests_slice_with_delay.py  tests_timeseries_store.py  tests_with_attributes.py
hostore/utils/: timeseries.py  ts_sync.py  utils.py  utils_test.py
hostore/utils/range/: range.py  tests.py
store/: apps.py  manager.py
store/migrations/: 0001_initial.py
