[metadata]
name = holcstore
version = 0.5.3a5
description = A Django App to efficiently store dense timeseries
long_description = file: README.md
long_description_content_type = text/markdown
url =
author = Jean-Pierre Lartigue, Yohan Roy
author_email =
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10, <=3.12
install_requires =
    backoff >= 2.2.1
    Django >= 4.0.0
    djangorestframework >= 3.14.0
    lz4 >= 4.4.4
    pandas >= 1.5.0
    pyarrow >= 14.0.0
    packaging >= 22.0
    requests >= 2.31.0